--- a/backend/public/html/login.html
+++ b/backend/public/html/login.html
@@ -21,8 +21,10 @@
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
     <form class="form-signin" action="/api/login" method="POST">
-      <a href="/assets/html/index.html"><img src="img/logo_small.png"></a>
-        <h2 class="freetext">Please sign in</h2>
+      <a href="https://www.oorep.com/"><img src="img/logo_small.png"></a>
+        <h1 class="h3 mb-5 font-weight-bold" style="padding-top:30px;">
+            Please sign in
+        </h1>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required>
         <label for="inputPassword" class="sr-only">Password</label>
