--- a/backend/public/html/register.html
+++ b/backend/public/html/register.html
@@ -20,17 +20,17 @@
 <body class="text-center">
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
-  <a href="/assets/html/index.html"><img src="img/logo_small.png"></a>
+  <a href="https://www.oorep.com/"><img src="img/logo_small.png"></a>
   <h1 class="h3 mb-5 font-weight-bold" style="padding-top:30px;">
       Sorry, registration unavailable while OOREP is in beta-testing stage
   </h1>
   
   <p class="mt-8 mb-5 text-muted">
-      <a href="/assets/html/index.html"><img class="image" src="img/pharmacy-3377670_640.jpg"></a>
+      <a href="https://www.oorep.com/"><img class="image" src="img/pharmacy-3377670_640.jpg"></a>
   </p>
   
   <p class="mt-8 mb-5 text-muted">
-    <b><a href="/assets/html/index.html">Go back to main page</a></b>
+    <b><a href="https://www.oorep.com/">Go back to main page</a></b>
   </p>
 </div>
 
