--- a/backend/public/html/login.html
+++ b/backend/public/html/login.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -21,7 +22,7 @@
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
     <form class="form-signin" action="/api/login" method="POST">
-      <a href="https://www.oorep.com/"><img src="img/logo_small.png"></a>
+      <a href="https://www.oorep.com/"><img src="img/logo_small.png" alt="OOREP"></a>
         <h1 class="h3 mb-5 font-weight-bold" style="padding-top:30px;">
             Please sign in
         </h1>
