--- a/backend/public/html/register.html
+++ b/backend/public/html/register.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,13 +21,13 @@
 <body class="text-center">
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
-  <a href="https://www.oorep.com/"><img src="img/logo_small.png"></a>
+  <a href="https://www.oorep.com/"><img src="img/logo_small.png" alt="OOREP"></a>
   <h1 class="h3 mb-5 font-weight-bold" style="padding-top:30px;">
       Sorry, registration unavailable while OOREP is in beta-testing stage
   </h1>
   
   <p class="mt-8 mb-5 text-muted">
-      <a href="https://www.oorep.com/"><img class="image" src="img/pharmacy-3377670_640.jpg"></a>
+      <a href="https://www.oorep.com/"><img class="image" src="img/pharmacy-3377670_640.jpg" alt=""></a>
   </p>
   
   <p class="mt-8 mb-5 text-muted">
